<resources>
    <string name="app_name">AppLockApp</string>
    <string name="all_your_applications">All your applications</string>
    <string name="accessibility_service_description">App lock</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="clear">Clear</string>
    <string name="ok">OK</string>
    <string name="set_password">Set your own password</string>
    <string name="grant_accessibility_service_for_us">Grant AccessibilityService for us</string>
    <string name="permission_desc">The app needs to know which app you are currently using. Therefore, the app needs accessibility service permission.\nThe application does not collect any information.</string>
    <string name="next">Next</string>
    <string name="password">Password</string>
</resources>